--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -16,23 +16,44 @@
 </head>
 <body>
   
-  Reliable, efficient delivery
-  Powered by Technology
+  <main>
+    <header>
+      <p>Reliable, efficient delivery</p>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+      <h1>Powered by Technology</h1>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <p>
+        Our Artificial Intelligence powered tools use millions of project data points
+        to ensure that your project is successful
+      </p>
+    </header>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+    <div id="container_cards">
+      <div class="card">
+        <h2>Supervisor</h2>
+        <p>Monitors activity to identify project roadblocks</p>
+      </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+      <div class="card">
+        <h2>Team Builder</h2>
+        <p>
+          Scans our talent network to create the optimal team for your project
+        </p>
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <div class="card">
+        <h2>Karma</h2>
+        <p>Regularly evaluates our talent to ensure quality</p>
+      </div>
+
+      <div class="card">
+        <h2>Calculator</h2>
+        <p>
+          Uses data from past projects to provide better delivery estimates
+        </p>
+      </div>
+    </div>
+  </main>
 
   
   <footer>
