--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   
   <main>
     <header>
-      <p>Reliable, efficient delivery</p>
+      <h1>Reliable, efficient delivery</h1>
 
       <h1>Powered by Technology</h1>
 
