--- a/index.html
+++ b/index.html
@@ -29,28 +29,36 @@
     </header>
 
     <div id="container_cards">
-      <div class="card">
+      <div class="card" style="--cor: hsl(0, 78%, 62%);">
         <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
+        
+        <img src="images/icon-supervisor.svg" alt="icon-supervisor">
       </div>
 
-      <div class="card">
+      <div class="card" style="--cor: hsl(180, 62%, 55%);">
         <h2>Team Builder</h2>
         <p>
           Scans our talent network to create the optimal team for your project
         </p>
+
+        <img src="images/icon-team-builder.svg" alt="icon-team-builder">
       </div>
 
-      <div class="card">
+      <div class="card" style="--cor: hsl(34, 97%, 64%);">
         <h2>Karma</h2>
         <p>Regularly evaluates our talent to ensure quality</p>
+
+        <img src="images/icon-karma.svg" alt="icon-karma">
       </div>
 
-      <div class="card">
+      <div class="card" style="--cor: hsl(212, 86%, 64%);">
         <h2>Calculator</h2>
         <p>
           Uses data from past projects to provide better delivery estimates
         </p>
+
+        <img src="images/icon-calculator.svg" alt="icon-calculator">
       </div>
     </div>
   </main>
